--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto+Slab&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <h1>Hello</h1>
     </header>
+    <article>
+        <h2>My article</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni rerum fugiat debitis fuga maxime! Provident esse quasi laborum et animi facilis excepturi illum voluptatem magni doloribus consequatur ea, voluptatibus adipisci?</p>
+    </article>
 </body>
 </html>
