Updated links and visuals

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
 </head>
 <body>
@@ -12,14 +12,14 @@
         <h1>Hewwo and wewcome to my dowain uwu</h1>
     </header>
     <nav>
-        <div>
-            Home
+        <div class="navItem">
+            <div>Home</div>
         </div>
-        <div>
-            About
+        <div class="navItem">
+            <div>About</div>
         </div>
-        <div>
-            Business
+        <div class="navItem">
+            <div>Business</div> 
         </div>
     </nav>
 </body>
