Adjusted colours and opacity. Added main.

--- a/index.html
+++ b/index.html
@@ -9,18 +9,28 @@
 </head>
 <body>
     <header>
-        <h1>Hewwo and wewcome to my dowain uwu</h1>
+        <h1>Wayne Enterprises</h1>
+        <h3>The future is built as one</h3>
     </header>
+    <div id="delare">
     <nav>
         <div class="navItem">
-            <div>Home</div>
+            Home
         </div>
         <div class="navItem">
-            <div>About</div>
+            About
         </div>
         <div class="navItem">
-            <div>Business</div> 
+            Business
         </div>
     </nav>
+</div>
+    <main>
+        <section class="dark">
+            Aloha fellow compadres
+        </section>
+    </main>
+
+
 </body>
 </html>
