Dropdown to navbar. Added JS to change title.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="js/script.js" defer></script>
+    <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
     <header>
@@ -18,7 +19,12 @@
             Home
         </div>
         <div class="navItem">
-            About
+            <div class="aboutTitle">About <i class="fas fa-angle-double-down"></i></div> 
+            <ul class="aboutList">
+                <li>Our founders</li>
+                <li>Our CEO</li>
+                <li>Our goals</li>
+            </ul>
         </div>
         <div class="navItem">
             Business
