Added parallalax effect to background.

--- a/index.html
+++ b/index.html
@@ -9,29 +9,40 @@
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
+    <img src="pics/cityBackground.jpg" alt="" class="background">
     <header>
         <h1>Wayne Enterprises</h1>
         <h3>The future is built as one</h3>
     </header>
-    <div id="delare">
+
     <nav>
         <div class="navItem">
             Home
         </div>
+
         <div class="navItem">
-            <div class="aboutTitle">About <i class="fas fa-angle-double-down"></i></div> 
+            <div class="aboutTitle">
+                About <i class="fas fa-angle-double-down"></i>
+            </div> 
             <ul class="aboutList">
                 <li>Our founders</li>
                 <li>Our CEO</li>
                 <li>Our goals</li>
             </ul>
         </div>
+
         <div class="navItem">
             Business
         </div>
     </nav>
-</div>
+
     <main>
+        <section class="light">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur nisi doloribus, dignissimos dolores in omnis. Suscipit repudiandae, soluta mollitia, consectetur tempora enim doloribus consequuntur tempore fugiat quas cum vel accusantium?
+        </section>
+        <aside>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, alias quis vel voluptate repellendus quod odit blanditiis. Unde culpa ad, eveniet temporibus ut nobis consectetur, aliquid esse praesentium, libero rerum.
+        </aside>
         <section class="dark">
             Aloha fellow compadres
         </section>
