Removed unnecessary JS. Made nav sticky. Worked on layout.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
         </div>
     </nav>
 
+    <div class="delare"></div>
+
     <main>
         <section class="light">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur nisi doloribus, dignissimos dolores in omnis. Suscipit repudiandae, soluta mollitia, consectetur tempora enim doloribus consequuntur tempore fugiat quas cum vel accusantium?
