Implemented graphics to scrollbar. Tried to implement footer. Tried to solve navbar.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
+    
+    <div class="notAFoot">
+
+        <div class="aaahh">
     <header>
         <h1>Wayne Enterprises</h1>
         <h3>The future is built as one</h3>
@@ -36,20 +40,23 @@
         </div>
     </nav>
 
-    <div class="delare"></div>
 
     <main>
-        <section class="light">
+        <section class="light text left">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur nisi doloribus, dignissimos dolores in omnis. Suscipit repudiandae, soluta mollitia, consectetur tempora enim doloribus consequuntur tempore fugiat quas cum vel accusantium?
         </section>
-        <aside>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, alias quis vel voluptate repellendus quod odit blanditiis. Unde culpa ad, eveniet temporibus ut nobis consectetur, aliquid esse praesentium, libero rerum.
-        </aside>
-        <section class="dark">
+        <section class="gray text midRight">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis sint animi omnis explicabo numquam eius earum in quaerat est dolore cumque, vel aliquam! Error necessitatibus nemo qui nobis ex quas?
+        </section>
+        <section class="dark text midLeft">
             Aloha fellow compadres
         </section>
+        <section class="gray text right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut maiores architecto incidunt quibusdam aliquid cumque ipsa sapiente natus harum suscipit aliquam quos, odit nihil repudiandae. Quidem repudiandae ad blanditiis accusamus!</section>
     </main>
-
-
+</div>
+    <footer>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quisquam consectetur aspernatur dolores facere voluptate, natus necessitatibus quod iusto! Saepe laboriosam quae illo at praesentium, ex delectus animi sit eius?
+    </footer>
+</div>
 </body>
 </html>
