Revert "Worked on footer. Added more positions to place sections in"
This reverts commit 30f305d01f6e8ced7cd42ca845cb4b1cbe8fae4d.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
-    <img src="pics/mountainBackground.jpg" alt="" class="background">
     <header>
         <h1>Wayne Enterprises</h1>
         <h3>The future is built as one</h3>
@@ -48,24 +47,10 @@
         <section class="dark text midLeft">
             Aloha fellow compadres
         </section>
-        <section class="gray text right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut maiores architecto incidunt quibusdam aliquid cumque ipsa sapiente natus harum suscipit aliquam quos, odit nihil repudiandae. Quidem repudiandae ad blanditiis accusamus!
-        </section>
-        <section class="dark text midRight">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius explicabo a quis est velit minus nostrum assumenda corrupti tempore quae quas, qui deserunt totam impedit dolorem ducimus debitis! Voluptatibus, iusto.
-        </section>
-        <section class="light text midLeft">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, dolore veniam reiciendis dolores ducimus accusantium quidem! Eveniet, ad. Reprehenderit, tenetur soluta. In at quod impedit nemo officia accusamus, debitis similique.
-        </section>
-        <section class="gray text fill">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo numquam accusamus nulla eos doloribus doloremque minima dolorum hic illo ratione, voluptatum optio dolore cupiditate, officia repudiandae id praesentium corrupti odit.
-        </section>
+        <section class="gray text right">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut maiores architecto incidunt quibusdam aliquid cumque ipsa sapiente natus harum suscipit aliquam quos, odit nihil repudiandae. Quidem repudiandae ad blanditiis accusamus!</section>
     </main>
     <footer>
-        <div>Wayne Enterprises is the company for you</div>
-        <div>Contact us at: 555-000 00</div>
-        <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
-    
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam quisquam consectetur aspernatur dolores facere voluptate, natus necessitatibus quod iusto! Saepe laboriosam quae illo at praesentium, ex delectus animi sit eius?
     </footer>
 </body>
 </html>
