--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
-    <img src="pics/mountainBackground.jpg" alt="" class="background">
+
+    <img src="pics/mountainBackground.jpg" alt="" class="background" id="andra">
+    <div class="background" id="mellan">hejsvejs</div>
+    
     <header>
         <h1>Wayne Enterprises</h1>
         <h3>The future is built as one</h3>
@@ -63,9 +66,27 @@
     </main>
     <footer>
         <div>Wayne Enterprises is the company for you</div>
-        <div>Contact us at: 555-000 00</div>
         <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
-    
+        <ul>
+            <li>
+                Home
+            </li>
+            <li>
+                About
+            </li>
+            <li>
+                Business
+            </li>
+            <li>
+                Careers
+            </li>
+            <li>
+                Contact
+            </li>
+            <li>
+                Privacy
+            </li>
+        </ul>
     </footer>
 </body>
 </html>
