Added more pages and links. Realised issues with background

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
     <script src="js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
@@ -21,7 +21,7 @@
 
     <nav>
         <div class="navItem">
-            Home
+            <a href="index.html">Home</a>
         </div>
 
         <div class="navItem">
@@ -29,9 +29,9 @@
                 About <i class="fas fa-angle-double-down"></i>
             </div> 
             <ul class="aboutList">
-                <li>Our founders</li>
-                <li>Our CEO</li>
-                <li>Our goals</li>
+                <li><a href="founder.html">Our founders</a></li>
+                <li><a href="ceo.html">Our CEO</a></li>
+                <li><a href="goals.html">Our goals</a></li>
             </ul>
         </div>
 
@@ -60,16 +60,14 @@
         <section class="light text midLeft">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, dolore veniam reiciendis dolores ducimus accusantium quidem! Eveniet, ad. Reprehenderit, tenetur soluta. In at quod impedit nemo officia accusamus, debitis similique.
         </section>
-        <section class="gray text fill">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo numquam accusamus nulla eos doloribus doloremque minima dolorum hic illo ratione, voluptatum optio dolore cupiditate, officia repudiandae id praesentium corrupti odit.
-        </section>
+        
     </main>
     <footer>
         <div>Wayne Enterprises is the company for you</div>
         <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
         <ul>
             <li>
-                Home
+                <a href="index.html">Home</a>
             </li>
             <li>
                 About
