--- a/ceo.html
+++ b/ceo.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="pics/logga.png">
     <title>Document</title>
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
 
-    <img src="pics/mountainBackground.jpg" alt="" class="background" id="andra">
+    
     <div class="background" id="mellan">hejsvejs</div>
     
     <header>
         <h1>Wayne Enterprises</h1>
-        <h3>The future is built as one</h3>
+        <h3>Bruce Wayne</h3>
     </header>
 
     <nav>
