Added images to the CEO page, cleaned up section-classes

--- a/ceo.html
+++ b/ceo.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="pics/logga.png">
-    <title>Document</title>
+    <link rel="icon" href="pics/logga.jpg">
+    <title>Wayne Enterprises</title>
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
@@ -41,7 +41,16 @@
 
 
     <main>
-        <section class="light text midLeft">I am the ceo of racism
+        <section class="gray midLeft">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem officiis blanditiis adipisci? Doloribus voluptas facere soluta fugit quidem a necessitatibus dicta, maxime vero accusantium nobis ut magni minus deleniti nulla!</section>
+        <section class="light right">
+            <img src="pics/bruce1.jpg" alt="" class="bruce">
+        </section>
+        <section class="dark fill multiple">
+            <h3>From a young age, Bruce Wayne had to carry the burden of leadership</h3>
+            <img src="pics/bruce3.jpg" alt="">
+        </section>
+        <section class="gray right">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos dolorem eum deleniti similique esse officia provident tempore quos. Ratione asperiores corrupti tempore cumque, laboriosam ducimus libero quaerat suscipit veniam.
         </section>
     </main>
 
