--- a/goals.html
+++ b/goals.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="pics/logga.png">
-    <title>Document</title>
+    <link rel="icon" href="pics/logga.jpg">
+    <title>Wayne Enterprises</title>
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
@@ -40,7 +40,7 @@
 
 
     <main>
-        <section class="light text midLeft">        My mango, is to blow up, and then act like i dont know nobaday
+        <section class="light midLeft">        My mango, is to blow up, and then act like i dont know nobaday
         </section>
     </main>
 
