--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Wayne Enterprises</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="icon" href="pics/logga.png">
+    <link rel="icon" href="pics/logga.jpg">
     <script src="js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
@@ -43,25 +43,25 @@
 
 
     <main>
-        <section class="light text left">
+        <section class="light left">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Consectetur nisi doloribus, dignissimos dolores in omnis. Suscipit repudiandae, soluta mollitia, consectetur tempora enim doloribus consequuntur tempore fugiat quas cum vel accusantium?
         </section>
-        <section class="gray text midRight">
+        <section class="gray midRight">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis sint animi omnis explicabo numquam eius earum in quaerat est dolore cumque, vel aliquam! Error necessitatibus nemo qui nobis ex quas?
         </section>
-        <section class="dark text midLeft">
+        <section class="dark midLeft">
             Aloha fellow compadres
         </section>
-        <section class="gray text right">
+        <section class="gray right">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut maiores architecto incidunt quibusdam aliquid cumque ipsa sapiente natus harum suscipit aliquam quos, odit nihil repudiandae. Quidem repudiandae ad blanditiis accusamus!
         </section>
-        <section class="dark text midRight">
+        <section class="dark midRight">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eius explicabo a quis est velit minus nostrum assumenda corrupti tempore quae quas, qui deserunt totam impedit dolorem ducimus debitis! Voluptatibus, iusto.
         </section>
-        <section class="light text midLeft">
+        <section class="light midLeft">
             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magnam, dolore veniam reiciendis dolores ducimus accusantium quidem! Eveniet, ad. Reprehenderit, tenetur soluta. In at quod impedit nemo officia accusamus, debitis similique.
         </section>
-        <section class="dark text fill">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis reprehenderit neque repellendus accusamus dicta doloremque perspiciatis in unde ipsum, illo ullam accusantium nulla labore, architecto eligendi asperiores natus assumenda ex.</section>
+        <section class="dark fill">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Omnis reprehenderit neque repellendus accusamus dicta doloremque perspiciatis in unde ipsum, illo ullam accusantium nulla labore, architecto eligendi asperiores natus assumenda ex.</section>
         
     </main>
     <footer>
