--- a/founder.html
+++ b/founder.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="pics/logga.png">
-    <title>Document</title>
+    <link rel="icon" href="pics/logga.jpg">
+    <title>Wayne Enterprises</title>
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
@@ -41,7 +41,7 @@
 
 
     <main>
-        <section class="light text midLeft">   Our founding father was a man be Jesus Chrysler. He was mexican
+        <section class="light midLeft">   Our founding father was a man be Jesus Chrysler. He was mexican
         </section>
       </main>
 
