--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wayne Enterprises</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
-    <link rel="icon" href="pics/logga.jpg">
+    <link rel="icon" href="pics/icon2.png">
     <script src="js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
