--- a/founder.html
+++ b/founder.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="pics/logga.jpg">
+    <link rel="icon" href="pics/icon2.png">
     <title>Wayne Enterprises</title>
 </head>
 <body>
