Added images, Google Fonts, Business-subpage

--- a/businesses.html
+++ b/businesses.html
@@ -42,21 +42,23 @@
         </div>
     </nav>
 
-
     <main>
-        <section class="gray midLeft">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem officiis blanditiis adipisci? Doloribus voluptas facere soluta fugit quidem a necessitatibus dicta, maxime vero accusantium nobis ut magni minus deleniti nulla!</section>
-        <section class="light right image">
-            <img src="pics/bruce1.jpg" alt="" class="bruce">
+        <section class="light midLeft">        My mango, is to blow up, and then act like i dont know nobaday
         </section>
-        <section class="dark fill multiple">
-            <h3>From a young age, Bruce Wayne had to carry the burden of leadership. Though it was though, his resolve never faltered, and under his leadership Wayne Enterprises has reached new heights</h3>
-            <img src="pics/bruce3.jpg" alt="">
+        <section class="gray midRight image unsaturate">
+            <img src="pics/cleanEnergy.jpg" alt="">
         </section>
-        <section class="gray midLeft image">
-            <img src="pics/bruce5.jpg" alt="">
+        <section class="light left image unsaturate">
+            <img src="pics/science.jpg" alt="">
         </section>
-        <section class="gray right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos dolorem eum deleniti similique esse officia provident tempore quos. Ratione asperiores corrupti tempore cumque, laboriosam ducimus libero quaerat suscipit veniam.
+        <section class="gray fill image unsaturate">
+            <img src="pics/construct.jpg" alt="">
+        </section>
+        <section class="dark midRight image unsaturate">
+            <img src="pics/techWork.jpg" alt="">
+        </section>
+        <section class="light left image unsaturate">
+            <img src="pics/ship.jpg" alt="">
         </section>
     </main>
 
