--- a/founder.html
+++ b/founder.html
@@ -14,8 +14,11 @@
     <div class="background" id="mellan">hejsvejs</div>
     
     <header>
-        <h1>Wayne Enterprises</h1>
-        <h3>Our founders</h3>
+        <img src="pics/logga2.png" alt="">
+        <div>
+            <h1>Wayne Enterprises</h1>
+            <h3>The future is built as one</h3>
+        </div>
     </header>
 
     <nav>
@@ -35,16 +38,20 @@
         </div>
 
         <div class="navItem">
-            Business
+            <a href="businesses.html">Business</a>
         </div>
     </nav>
 
 
-    <main>
-        <section class="light midLeft">   Our founding father was a man be Jesus Chrysler. He was mexican
+    <main class="container">
+        <section class="gray">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos?
         </section>
-      </main>
+        <section class="light">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos?
+        </section>
 
+    </main>
     <footer>
         <div>Wayne Enterprises is the company for you</div>
         <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
@@ -69,5 +76,7 @@
             </li>
         </ul>
     </footer>
+
+
 </body>
 </html>
