--- a/goals.html
+++ b/goals.html
@@ -13,8 +13,11 @@
     <div class="background" id="mellan">hejsvejs</div>
     
     <header>
-        <h1>Wayne Enterprises</h1>
-        <h3>The future we want to see</h3>
+        <img src="pics/logga2.png" alt="">
+        <div>
+            <h1>Wayne Enterprises</h1>
+            <h3>The future is built as one</h3>
+        </div>
     </header>
 
     <nav>
@@ -34,14 +37,21 @@
         </div>
 
         <div class="navItem">
-            Business
+            <a href="businesses.html">Business</a>
         </div>
     </nav>
 
 
     <main>
-        <section class="light midLeft">        My mango, is to blow up, and then act like i dont know nobaday
+        <section class="light midLeft">        
+            We here at Wayne Enterprises have set up goals that we strive towards.
+            We see it as our responsibility as a large company to set an example for how
+            to act in a trying time such as this.
         </section>
+        <section class="gray midRight image unsaturate">
+            <img src="pics/cleanEnergy.jpg" alt="">
+        </section>
+        
     </main>
 
     <footer>
