--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Wayne Enterprises</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="icon" href="pics/icon2.png">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|EB+Garamond&display=swap" rel="stylesheet">
     <script src="js/script.js" defer></script>
     <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
@@ -16,8 +17,11 @@
     <div class="background" id="mellan">hejsvejs</div>
     
     <header>
-        <h1>Wayne Enterprises</h1>
-        <h3>The future is built as one</h3>
+        <img src="pics/logga2.png" alt="">
+        <div>
+            <h1>Wayne Enterprises</h1>
+            <h3>The future is built as one</h3>
+        </div>
     </header>
 
     <nav>
@@ -37,7 +41,7 @@
         </div>
 
         <div class="navItem">
-            Business
+            <a href="businesses.html">Business</a>
         </div>
     </nav>
 
