--- a/goals.html
+++ b/goals.html
@@ -2,10 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="pics/icon2.png">
     <title>Wayne Enterprises</title>
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="icon" href="pics/icon2.png">
+    <link href="https://fonts.googleapis.com/css?family=Bebas+Neue|EB+Garamond&display=swap" rel="stylesheet">
+    <script src="js/script.js" defer></script>
+    <script src="https://kit.fontawesome.com/81c14f1bdd.js" crossorigin="anonymous" defer></script>
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
