Added final page and edited navbar

--- a/ceo.html
+++ b/ceo.html
@@ -26,11 +26,13 @@
 
     <nav>
         <div class="navItem">
-            <a href="index.html">Home</a>
+            <div class="navTitle">
+                <a href="index.html">Home</a>
+            </div>
         </div>
 
         <div class="navItem">
-            <div class="aboutTitle">
+            <div class="navTitle">
                 About <i class="fas fa-angle-double-down"></i>
             </div> 
             <ul class="aboutList">
@@ -41,7 +43,13 @@
         </div>
 
         <div class="navItem">
-            <a href="businesses.html">Business</a>
+            <div class="navTitle">
+                Business <i class="fas fa-angle-double-down"></i>
+            </div> 
+            <ul class="aboutList">
+                <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
+                <li><a href="joblistings.html">Join us</a></li>
+            </ul>
         </div>
     </nav>
 
