--- a/joblistings.html
+++ b/joblistings.html
@@ -14,7 +14,7 @@
     <img src="pics/cityBackground.jpg" alt="" class="background">
 
     
-    <div class="background" id="mellan">hejsvejs</div>
+    <div class="background" id="mellan"></div>
     
     <header>
         <img src="pics/logga2.png" alt="">
@@ -53,16 +53,10 @@
         </div>
     </nav>
 
-
-    <main class="container">
-        <section class="gray">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos?
-        </section>
-        <section class="light">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos?
-        </section>
+    <main>
 
     </main>
+
     <footer>
         <div>Wayne Enterprises is the company for you</div>
         <div>You can find our offices at various locations around the world. Click <i>here</i> to find one near you!</div>
@@ -87,7 +81,5 @@
             </li>
         </ul>
     </footer>
-
-
 </body>
 </html>
