Continued work on the timeline

--- a/founder.html
+++ b/founder.html
@@ -62,11 +62,15 @@
         
         <article class="light två slide">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos? YALLAH
-            <i class="fas fa-chevron-down"></i>
+            <div class="start">
+                <i class="fas fa-chevron-down"></i>
+            </div>
         </article>
         <article class="dark tre slide">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos?
-            <i class="fas fa-chevron-down"></i>
+            <div class="start">
+                <i class="fas fa-chevron-down"></i>
+            </div>
         </article>
 
         <footer class= "slide">
