Worked on timeline, added mobile interactivity. Started work on making navbar mobile-friendly.

--- a/ceo.html
+++ b/ceo.html
@@ -14,7 +14,7 @@
     <img src="pics/cityBackground.jpg" alt="" class="background">
 
     
-    <div class="background" id="mellan">hejsvejs</div>
+    <div class="background" id="mellan"></div>
     
     <header>
         <img src="pics/logga2.png" alt="">
@@ -55,7 +55,10 @@
 
 
     <main>
-        <section class="gray midLeft">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem officiis blanditiis adipisci? Doloribus voluptas facere soluta fugit quidem a necessitatibus dicta, maxime vero accusantium nobis ut magni minus deleniti nulla!</section>
+        <section class="gray midLeft">
+
+            Our company is lead by Bruce Wayne: Genius, billionare, playboy, and philatropist. Bruce Wayne has been the leader of Wayne Enterprises for many years, and every year since has been one of success and progress. 
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem officiis blanditiis adipisci? Doloribus voluptas facere soluta fugit quidem a necessitatibus dicta, maxime vero accusantium nobis ut magni minus deleniti nulla!</section>
         <section class="light right image">
             <img src="pics/bruce1.jpg" alt="" class="bruce">
         </section>
@@ -67,7 +70,7 @@
             <img src="pics/bruce5.jpg" alt="">
         </section>
         <section class="gray right">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos dolorem eum deleniti similique esse officia provident tempore quos. Ratione asperiores corrupti tempore cumque, laboriosam ducimus libero quaerat suscipit veniam.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eos dolorem eum deleniti similique esse officia provident tempore quos. Ratione asperiores corrupti tempore cumque, laboriosam ducimus libero quaerat suscipit veniam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus voluptatibus accusamus hic dolore ut aliquid quos illum assumenda eum aliquam reprehenderit sequi exercitationem minus, excepturi dolores ipsam voluptas, veritatis suscipit.
         </section>
     </main>
 
