--- a/founder.html
+++ b/founder.html
@@ -13,9 +13,7 @@
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
-    <main>
-
-    <div class="ett slide">
+    <div class="överstaDelen">
         <header>
             <img src="pics/logga2.png" alt="">
             <div>
@@ -53,24 +51,16 @@
             </div>
         </nav>
 
-
-        <div class="start" id="knappHållare">
-            <i class="fas fa-chevron-down" id="knapp"></i>
-        </div>
     </div>
-
-        
-        <article class="light två slide">
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos? YALLAH
-            <div class="start">
-                <i class="fas fa-chevron-down"></i>
-            </div>
+    <main>
+        <article class="ett slide">
+            Hejsvejs
         </article>
-        <article class="dark tre slide">
+        <article class="light slide">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos? YALLAH
+        </article>
+        <article class="dark slide">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos?
-            <div class="start">
-                <i class="fas fa-chevron-down"></i>
-            </div>
         </article>
 
         <footer class= "slide">
