--- a/goals.html
+++ b/goals.html
@@ -59,8 +59,37 @@
             We see it as our responsibility as a large company to set an example for how
             to act in a trying time such as this.
         </section>
+        <section class="dark right">
+            <h3>Our three biggest focuses in this time are:</h3>
+            <ol>
+                <li>Equal opportunity for all</li>
+                <li>Clean energy for all</li>
+                <li>Health and safety for all</li>
+            </ol>
+        </section>
+        <section class="dark left">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nam sit voluptates maxime eos quia nesciunt est! Laudantium, repellendus quod ullam quis optio fugit placeat natus non laborum unde, sapiente voluptatibus?
+        </section>
         <section class="gray midRight image unsaturate">
             <img src="pics/cleanEnergy.jpg" alt="">
+        </section>
+        <section class="gray fill image unsaturate">
+            <img src="pics/goals1.jpg" alt="">
+        </section>
+        <section class="light midLeft">
+            <P>
+            Our philosophy here at Wayne Enterprises has always been to put the people first. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi adipisci repellat assumenda iste consectetur at mollitia molestiae nesciunt soluta aliquam, nihil labore. Vitae dolores nulla autem recusandae consequatur cumque fuga?
+        </P>
+        <br>
+        <P>
+            To connect people is to secure the future. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos ea voluptate pariatur dignissimos, vitae nostrum, fuga dolorum necessitatibus molestiae quas modi laborum ex quam voluptates laboriosam a odit ipsam doloribus!
+        </P>
+        </section>
+        <section class="dark right image unsaturate">
+            <img src="pics/goals2.jpg" alt="">
+        </section>
+        <section class="gray mid">
+            We do not strive for efficiency, we strive for security of results. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis ab, id aut esse et sed consequuntur, voluptate optio ducimus repellendus consectetur mollitia odit distinctio amet numquam dignissimos explicabo dolorum dolores!
         </section>
         
     </main>
