--- a/businesses.html
+++ b/businesses.html
@@ -55,7 +55,18 @@
 
     <main>
         <section class="light midLeft">        
-            My mango, is to blow up, and then act like i dont know nobaday
+            <h3>
+                The Wayne Enterprise Family consists of a wide assortment of industries and projects that together work towards taking Wayne Enterprises into the future
+            </h3>
+        </section>
+        <section class="dark left">
+            <p>
+                One of many projects that Wayne Technologies is working towards is the promise for clean energy to all
+            </p>   
+            <br>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam, maiores placeat dolor repellendus labore repellat eum nostrum corporis quisquam illum rerum quis pariatur dolorum qui eius tempore odit quo modi.
+            </p>
         </section>
         <section class="gray midRight image unsaturate">
             <img src="pics/cleanEnergy.jpg" alt="">
@@ -63,14 +74,27 @@
         <section class="light left image unsaturate">
             <img src="pics/science.jpg" alt="">
         </section>
+        
+        <section class="gray right">
+            <p>Wayne Biotech is researching the next step in BCI-systems. Lorem ipsum dolor sit amet consectetur adipisicing elit. A, id. Iste corrupti dicta at architecto doloribus similique harum, alias eveniet eaque. Tempora aspernatur minima ipsam temporibus voluptate vel culpa sit.</p>  
+            <p>Wayne Medical is working towards helping all in need around the world. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo perspiciatis voluptatibus nesciunt veritatis aperiam blanditiis optio. Cupiditate in incidunt rerum maiores error, ullam aspernatur iusto consequuntur culpa rem impedit quas.</p> 
+        </section>
         <section class="gray fill image unsaturate">
             <img src="pics/construct.jpg" alt="">
+            <h3>Wayne Constructions is building the future</h3>
+        </section>
+        <section class="light left">
+            <p>The Wayne Research Institure is meant to give the future visionaries a place the spread their wings and start to change the world</p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore sit itaque sequi, recusandae veritatis corporis eum ipsa natus enim saepe a assumenda expedita accusamus repudiandae pariatur ullam dolorum magnam laborum.</p>
         </section>
         <section class="dark midRight image unsaturate">
             <img src="pics/techWork.jpg" alt="">
         </section>
         <section class="light left image unsaturate">
             <img src="pics/ship.jpg" alt="">
+        </section>
+        <section class="gray midRight">
+            Wayne Shipping together with Wayne Yards and Wayne Aerospace works together to connect to worl and make transportation easier. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet quo autem eum quibusdam minima harum iste aspernatur ad quaerat hic, dolor atque nam distinctio nisi laudantium eos nostrum voluptas odit? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum ullam laudantium itaque, sequi, aspernatur quisquam sit consequuntur quae animi velit dignissimos facere maxime sunt repellendus nobis fugit non omnis sint?
         </section>
     </main>
 
