DId some work on the timeline. Pondering over why stuff doesn't work

--- a/businesses.html
+++ b/businesses.html
@@ -76,8 +76,8 @@
         </section>
         
         <section class="gray right">
-            <p>Wayne Biotech is researching the next step in BCI-systems. Lorem ipsum dolor sit amet consectetur adipisicing elit. A, id. Iste corrupti dicta at architecto doloribus similique harum, alias eveniet eaque. Tempora aspernatur minima ipsam temporibus voluptate vel culpa sit.</p>  
-            <p>Wayne Medical is working towards helping all in need around the world. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo perspiciatis voluptatibus nesciunt veritatis aperiam blanditiis optio. Cupiditate in incidunt rerum maiores error, ullam aspernatur iusto consequuntur culpa rem impedit quas.</p> 
+            <p>Wayne Biotech is researching the next step in BCI-systems. Lorem ipsum dolor sit amet consectetur adipisicing elit. A, id. Iste corrupti dicta at architecto doloribus similique harum, alias eveniet eaque.</p>  
+            <p>Wayne Medical is working towards helping all in need around the world. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo perspiciatis voluptatibus nesciunt veritatis aperiam blanditiis optio.</p> 
         </section>
         <section class="gray fill image unsaturate">
             <img src="pics/construct.jpg" alt="">
