--- a/joblistings.html
+++ b/joblistings.html
@@ -65,7 +65,7 @@
                 <a href="index.html">Home</a>
             </li>
             <li>
-                About
+               <a href="404.html">About</a> 
             </li>
             <li>
                 Business
