Worked on timeline page (again). Begun work on mobile-navbar

--- a/index.html
+++ b/index.html
@@ -53,6 +53,39 @@
         </div>
     </nav>
 
+    <div class="navHållare"><!--Denna navbar syns endast när skärmen är i mobilstorlek-->
+        <div class="coverUp"><i class="fas fa-bars"></i></div>
+        
+        <nav class="sekundärNav">
+        <div class="navItemF">
+            <div class="navTitle">
+                <a href="index.html">Home</a>
+            </div>
+        </div>
+
+        <div class="navItemF">
+            <div class="navTitle">
+                About <i class="fas fa-angle-double-down"></i>
+            </div> 
+            <ul class="aboutList">
+                <li><a href="founder.html">Our founders</a></li>
+                <li><a href="ceo.html">Our CEO</a></li>
+                <li><a href="goals.html">Our goals</a></li>
+            </ul>
+        </div>
+
+        <div class="navItemF">
+            <div class="navTitle">
+                Business <i class="fas fa-angle-double-down"></i>
+            </div> 
+            <ul class="aboutList">
+                <li><a href="businesses.html">The Wayne Enterprise Family</a></li>
+                <li><a href="joblistings.html">Join us</a></li>
+            </ul>
+        </div>
+    </nav>
+</div>  
+
 
     <main>
         <section class="light left">
