--- a/founder.html
+++ b/founder.html
@@ -13,23 +13,20 @@
 </head>
 <body>
     <img src="pics/cityBackground.jpg" alt="" class="background">
-    <div class="överstaDelen">
-        <header>
-            <img src="pics/logga2.png" alt="">
-            <div>
-                <h1>Wayne Enterprises</h1>
-                <h3>The future is built as one</h3>
-            </div>
-        </header>
 
-        <nav>
-            <div class="navItem">
+            <img src="pics/logga2.png" class="ikon" alt="">
+
+
+        <div class="navHållare">
+            <div class="coverUp"><i class="fas fa-bars"></i></div>
+            <nav>
+            <div class="navItemF">
                 <div class="navTitle">
                     <a href="index.html">Home</a>
                 </div>
             </div>
 
-            <div class="navItem">
+            <div class="navItemF">
                 <div class="navTitle">
                     About <i class="fas fa-angle-double-down"></i>
                 </div> 
@@ -40,7 +37,7 @@
                 </ul>
             </div>
 
-            <div class="navItem">
+            <div class="navItemF">
                 <div class="navTitle">
                     Business <i class="fas fa-angle-double-down"></i>
                 </div> 
@@ -50,13 +47,14 @@
                 </ul>
             </div>
         </nav>
+    </div>  
 
-    </div>
     <main>
         <article class="ett slide">
             Hejsvejs
         </article>
         <article class="light slide">
+            <p class="topLeft">Wayne Enterprises has its roots in the 17th century as a merchant house started by the borther Judge Solomon Wayne and Joshua Wayne.</p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quo eos consectetur corporis quisquam, et vitae amet ipsa est labore possimus reiciendis quam nam maxime numquam aut beatae ullam ex quos? YALLAH
         </article>
         <article class="dark slide">
